k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: todolist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: ilyassepro/todo-app-backend:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
  namespace: todolist
spec:
  selector:
    app: todo-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
