k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todolist
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: todo-frontend
            port:
              number: 80
      - path: /api/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: todo-backend
            port:
              number: 5000
